added 2fa mock, twilio mock and redis for auth. NEed to work on strengthening auth tho

--- a/src/auth/auth.js.sample
+++ b/src/auth/auth.js.sample
@@ -1,11 +1,32 @@
-//sample auth middleware
+// Please implement the following methods:
+
+/* Expressjs middleware to authenticate twilio.*/
+
+module.exports.accountAuthMiddleware= (req,res,next) =>{};
 
 
-module.exports = (req,res,next)=>{
-    if (req.body.password === "passwooooord")
-        next();
-    else{
-        res.status(403).end();
-        return;
-    }
-}
+/* generate and store 2fa token safely. Returns the token that we will send to the user */
+
+module.exports.generateAndStore2faToken = async () => { return "sample token";};
+
+
+/* Send 2fa token to your 2fa device */
+
+module.exports.send2faToken = (token) => {
+    console.log("use token: ",token, "to authorize.");
+};
+
+
+/* authenticate the token passed in as argument. If authenticated, return the object:
+*   {isAuthenticated: true}
+*   if not, then return:
+*   {isAuthenticated:false, reason: "put a reason for denial here." }
+* */
+
+module.exports.authenticate2faToken = async (token) => {
+return {isAuthenticated: true};
+};
+
+
+
+
