--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.2",
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "log-timestamp": "^0.1.2",
+    "moment": "^2.22.2",
+    "redis": "^2.8.0",
     "twilio": "^3.19.2"
   }
 }
