--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "chatbot_server.js",
   "scripts": {
-    "devel-server": "node chatbot_server.js",
+    "devel-server": "NUM_CPU=1 node chatbot_server.js",
+    "prod-server": "NODE_ENV=production node chatbot_server.js",
     "test-auth": "NODE_ENV=development mocha --exit validator/*.test.js"
   },
   "author": "",
