--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "log-timestamp": "^0.1.2",
+    "mailgun-js": "^0.21.0",
     "moment": "^2.22.2",
     "redis": "^2.8.0",
+    "scmp": "^2.0.0",
     "twilio": "^3.19.2"
   },
   "devDependencies": {
